--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">testSuite</th></tr>
-<tr><td><a href="#t0">MytestCase</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">36,613</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">107,492</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">testSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MytestCase &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.VoisTest</td><td><a href="#m0">CartCheckOut</a></td><td rowspan="1">1606250947008</td><td rowspan="1">16820</td></tr><tr class="passedeven"><td><a href="#m1">Login</a></td><td rowspan="1">1606250939336</td><td rowspan="1">7550</td></tr><tr class="passedeven"><td><a href="#m2">Registration</a></td><td rowspan="1">1606250927277</td><td rowspan="1">11793</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.RestAssuredApi</td><td><a href="#m0">Creatpost</a></td><td rowspan="1">1606416375540</td><td rowspan="1">6297</td></tr><tr class="passedeven"><td><a href="#m1">Getallposts</a></td><td rowspan="1">1606416382075</td><td rowspan="1">100913</td></tr></tbody>
 </table>
-<h2>MytestCase</h2><h3 id="m0">tests.VoisTest#CartCheckOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.VoisTest#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.VoisTest#Registration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.RestAssuredApi#Creatpost</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.RestAssuredApi#Getallposts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
