--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7b80b2">  <td>20/04/14 14:58:58</td>   <td>0</td> <td title="&gt;&gt;TestBase.startDriver(java.lang.String)[pri:0, instance:tests.TEDsearchTest@a4102b8]">&gt;&gt;startDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1708570683</td>   <td></td> </tr>
-<tr bgcolor="c87990">  <td>20/04/14 14:59:16</td>   <td>17226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TEDsearchTest.TEDSearchinGoogleplay()[pri:0, instance:tests.TEDsearchTest@a4102b8]">TEDSearchinGoogleplay</td> 
-  <td>main@1708570683</td>   <td></td> </tr>
-<tr bgcolor="c87990">  <td>20/04/14 14:59:16</td>   <td>17266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TEDsearchTest.fbsearchingoogleplay()[pri:1, instance:tests.TEDsearchTest@a4102b8]">fbsearchingoogleplay</td> 
-  <td>main@1708570683</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>20/11/26 20:46:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredApi.Creatpost()[pri:0, instance:tests.RestAssuredApi@22635ba0]">Creatpost</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>20/11/26 20:46:22</td>   <td>6535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredApi.Getallposts()[pri:1, instance:tests.RestAssuredApi@22635ba0]">Getallposts</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
 </table>
